--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <div class="box rightside"></div>
   <div class="box leftside"></div>
   <div class="box map" id="map"></div>
+  <div class="box placeholder"></div>
   <div class="box start">
 	<h2>Отправляйся на пикник!</h2>
 	<form method="post" action="" id="ajaxform"> <br />
