--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		
-		<input type="submit" value="Найти!" disabled  class="btn btn-primary btn-lg""/>
+		<input type="submit" value="Найти!"  class="btn btn-primary btn-lg""/>
 	</form>
   </div>
 </div>
