--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<input type="range" id="Distance" name="Distance" min="5" max="60" step="5" value="20" class="form-control-range" onchange="document.getElementById('rangeValue2').innerHTML = this.value;"> 
 		</div>
 		<div class="form-group">
-			<button  type=button class="btn btn-info" data-toggle="collapse" data-target="#hide-me">Дополнительные настройки</button>
-			<div id="hide-me" class="collapse">
+			<button  type=button class="btn btn-info" data-toggle="collapse" data-target="#hide-me2">Дополнительные настройки</button>
+			<div id="hide-me2" class="collapse">
 				<div class="form-check">
 					
 					<label for="HasToilet"  class="form-check-label"><input type="checkbox" id="HasToilet" name="HasToilet" value="1" class="form-check-input"> Туалет </label>
@@ -96,7 +96,7 @@
   <div class="box placeholder"></div>
   <div class="box start">
 	<h2>Отправляйся на пикник!</h2>
-	<form method="post" action="" id="ajaxform"> <br />
+	<form method="post" action="" id="ajaxform"> 
 		<div class="form-check">
 			
 			<label for="NiceWeather"  class="form-check-label"><input  checked type="checkbox" id="NiceWeather" name="NiceWeather" value="1" class="form-check-input"> Приятная погода  </label>
